add images printer

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@types/mathjs": "^6.0.5",
     "eslint": "^7.2.0",
+    "jimp": "^0.14.0",
     "prettier": "^2.0.5",
     "rpi-led-matrix": "^1.10.0",
     "typescript": "^3.9.5"
