--- a/package.json
+++ b/package.json
@@ -6,14 +6,27 @@
   "license": "ISC",
   "dependencies": {
     "@types/mathjs": "^6.0.5",
+    "core-util-is": "^1.0.2",
     "eslint": "^7.2.0",
+    "express": "^4.17.1",
     "jimp": "^0.14.0",
     "prettier": "^2.0.5",
     "rpi-led-matrix": "^1.10.0",
-    "typescript": "^3.9.5"
+    "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^14.0.13",
-    "ts-node": "^8.10.2"
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.11.8",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
+  },
+  "main": "dist/index.js",
+  "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
