--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.11",
     "@types/mathjs": "^6.0.5",
     "eslint": "^7.2.0",
+    "express": "^4.17.1",
     "jimp": "^0.14.0",
     "prettier": "^2.0.5",
     "rpi-led-matrix": "^1.10.0",
@@ -14,6 +16,12 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.13",
-    "ts-node": "^8.10.2"
+    "ts-node": "^8.10.2",
+    "tslint": "^5.12.1"
+  },
+  "scripts": {
+    "start": "tsc && sudo node build/Server/app.js",
+    "build": "tsc",
+    "run": "node build/Server/app.js"
   }
 }
