--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "eslint": "^7.2.0",
     "express": "^4.17.1",
     "jimp": "^0.14.0",
+    "node-addon-api": "^3.1.0",
     "prettier": "^2.0.5",
     "rpi-led-matrix": "^1.10.0",
+    "typescript": "^4.2.3",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
