--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "@types/mathjs": "^6.0.5",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "eslint": "^7.2.0",
     "express": "^4.17.1",
