--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,8 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "typeAcquisition": {
+    "enable": true
+  }
 }
